--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -47,4 +47,4 @@ table {
 	border-spacing: 0;
 }
 a{text-decoration: none;color: inherit;}
-img{vertical-align: top;}
+img{vertical-align: top;max-width: 100%;}
