--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -11,51 +11,62 @@
     background-color: #fff;
     z-index: 1010;
 }
-.gnb-area{
+.header .inner{
     position: static;
     display: flex;
     height: 64px;
     max-width: 1920px;
     min-width: 768px;
     padding: 0 104px 0 98px;
+    box-sizing: border-box;
+    height: 64px;
 }
-.gnb-area .logo{
+.header .logo{
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
 }
-.gnb-area .logo a{
+.header .logo a{
     content: '';
     display: block;
     background-position: -105px 0px;
     width: 223px;
     height: 35px;
 }
-.gnb-area .column-left{
+.header .column-left{
     display: flex;
     margin-left: 29px;
 }
-.gnb-area .gnb-list{
+.header .gnb-list{
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
 }
-.gnb-area .gnb-item:first-child {
-    margin-left: 0;
+.header .gnb-item{
+    display: flex;
+    align-items: center;
+    height: 100%;
 } 
-.gnb-area .gnb-item{}   
+.header .gnb-item > a{
+    display: block;
+    padding: 0 10px;
+    font-size: 17px;
+    line-height: 32px;
+    letter-spacing: -0.36px;
+}   
 
-.gnb-area .column-right{
+.header .column-right{
     display: flex;
     margin-left: auto;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
 }
-
-
+.header .btn-menu{
+    display: none;
+}
 
 
 
@@ -76,8 +87,15 @@
 /* footer */
 .footer{
     background-color: #f2f2f2;
-    padding: 30px 104px 30px 98px;
+}
+.footer .inner{
     display: flex;
+    width: 100%;
+    max-width: 1920px;
+    padding: 25px 104px 25px 98px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    align-items: center;
 }
 .footer .text-box{
     flex: 1;
@@ -103,4 +121,31 @@
     outline: none;
     background:#f2f2f2;
     border-bottom: 2px solid #000;
+}
+
+
+/* 반응형 */
+
+@media screen and (max-width: 1100px) {
+    /* *1024을 기준으로 화면을 보고 잡아야함 */
+    .header .inner{padding: 0 22px;}
+    .footer .inner{padding: 25px 22px;}
+}
+@media screen and (max-width: 1023px) {
+    /* *768을보고 잡아야함 */
+    .header .column-left{display: none;}
+    .header .gnb-list{display: none;}
+    .header .btn-menu{display: block;}
+
+    .header .logo a{
+    /* 포지션과 좌표 만 넣어주기 */
+    background-position: 0px 0px;
+    width: 160px;
+    height: 23px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    /* *320을 보고 잡아야함 */
+  
 }
