--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,17 +9,27 @@
     top: 0;
     width: 100%;
     background-color: #fff;
-    z-index: 1010;
+    z-index: 1020;
+}
+.header.hover::before{
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: #fff;
+    content: '';
 }
 .header .inner{
     position: static;
     display: flex;
     height: 64px;
     max-width: 1920px;
-    min-width: 768px;
+    min-width: 320px;
+    width: 100%;
     padding: 0 104px 0 98px;
-    box-sizing: border-box;
-    height: 64px;
+    margin: 0 auto;
+    -webkit-box-sizing: border-box;
 }
 .header .logo{
     display: flex;
@@ -37,6 +47,7 @@
 .header .gnb-area{
     display: flex;
     margin-left: 29px;
+    position: relative;
 }
 .header .gnb-list{
     display: flex;
@@ -49,6 +60,15 @@
     align-items: center;
     height: 100%;
 } 
+.header .gnb-item .sub-menu{
+    display: none;
+    position: absolute;
+    top: 64px;
+    width: 100%;
+}
+.header .gnb-item .sub-menu.active{
+    display: block;
+}
 .header .gnb-item > a{
     display: block;
     padding: 0 10px;
@@ -67,10 +87,30 @@
 .header .btn-menu{
     display: none;
 }
+.header .btn-close{
+    display: none;
+}
 
+.header .side-menu{
+    position: absolute;
+    right: 0;
+    top: 64px;
+    width: 100%;
+    height: 100vh;
+    background: #f00;
+}
 
-
-
+.side-menu .gnb-item a{}
+.side-menu .gnb-item .team{}
+.side-menu .gnb-item .team::before{}
+.side-menu .gnb-item .sub-menu{}
+.side-menu .gnb-item .sub-item{}
+.side-menu .util-area{margin-left: 29px;}
+.side-menu .util-list{}
+.side-menu .util-item{}
+.side-menu .lang-area{margin-left: 29px;}
+.side-menu .lang-list{}
+.side-menu .lang-item{}
 
 
 
@@ -143,6 +183,32 @@
     width: 160px;
     height: 23px;
     }
+    .header .btn-menu{
+        display: block;
+        margin-right: 20px;
+        border: 0;
+        outline: none;
+        background-image: url(../images/icon/msp-img.png);
+        background-size: 195px 181px;
+        background-position: -85px -28px;
+        width: 20px;
+        height: 14px;
+        background-color:#fff;
+        cursor: pointer;
+    }
+    .header .side-menu .gnb-area{
+        display: block;
+        margin-left: 0;
+    }
+    .side-menu .gnb-list{
+        display: block;
+        padding: 11px 0 9px;
+    }
+    .side-menu .gnb-item{
+        display: block;
+        padding: 0 22px;
+    }
+  
 }
 
 @media screen and (max-width: 767px) {
